Fix webgl/1.0.x/conformance/programs/program-test failure https://bugs.webkit.org/show_bug.cgi?id=237414

Reviewed by Kimmo Kinnunen.

Let ANGLE handle link errors to enable spec-required
side-effects, such as failing draw calls.

* LayoutTests/TestExpectations:
* LayoutTests/platform/gtk/TestExpectations:
* Source/WebCore/html/canvas/WebGLRenderingContextBase.cpp:
(WebCore::WebGLRenderingContextBase::linkProgramWithoutInvalidatingAttribLocations):

Canonical link: https://commits.webkit.org/251985@main